building the front end. user login made and most user incident abilities created

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -13,7 +13,9 @@
         </div>
     </nav>
 </div>
-<router-outlet></router-outlet>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-header">
