--- a/client/src/app/incident-details/incident-details.component.html
+++ b/client/src/app/incident-details/incident-details.component.html
@@ -1,8 +1,9 @@
 <div class="container">
   <form>
-    Brief Description: <input type="text" name="shortDescription" value="{{incident.shortDescription}}" class="form-control">
-    Detailed Description: <textarea name="longDescription" class="form-control">{{incident.longDescription}}</textarea>
-    Incident Type: <input type="text" name="type" value="{{incident.type}}" class="form-control">
+    Brief Description: <input type="text" name="shortDescription" value="{{incident.incidentrevisions[0].shortDescription}}" class="form-control">
+    Detailed Description: <textarea name="longDescription" class="form-control" >{{incident.incidentrevisions[0].longDescription}}</textarea>
+    Incident Type: <input type="text" name="type" value="{{incident.incidentrevisions[0].type}}" class="form-control">
+    Tracker: <input type="text" name="tracker" value="{{incident.trackerId}}" class="form-control">
     <br>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
