--- a/client/src/app/new-incident/new-incident.component.html
+++ b/client/src/app/new-incident/new-incident.component.html
@@ -1,15 +1,17 @@
 <form>
   Brief Description: 
-  <input type="text" name='shortDescription' class='form-control'>
+  <input #shortDescription type="text" name='shortDescription' class='form-control'>
   Detailed Description:
-  <textarea class="form-control" name="longDescription"></textarea>
+  <textarea #longDescription class="form-control" name="longDescription"></textarea>
   Incident Type:
-  <select name="type" class="form-control">
-    <option value="technology">Technology</option>
-    <option value="other">Other</option>
+  <select #type name="type" class="form-control">
+    <option value="Technical">Technical</option>
+    <option value="Other">Other</option>
   </select>
-  <select name="tracker" class="form-control">
+  Tracker:
+  <select #tracker name="tracker" class="form-control">
     <option *ngFor="let tracker of trackers" value="{{tracker.id}}">{{tracker.firstName}} {{tracker.lastName}}</option>
   </select>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <br>
+  <button (click)="addIncident(shortDescription.value, longDescription.value, type.value, tracker.value)" class="btn btn-default">Submit</button>
 </form>
