added a route that gets the user infomation to change the information displayed on each page based on the isTracker data

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,17 +1,5 @@
 <div class="container">
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Incident Tracking</a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li>Justin True<!--insert username here--></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Logout</a></li>
-            </ul>
-        </div>
-    </nav>
+    <app-header></app-header>
 </div>
 <div class="container">
     <router-outlet></router-outlet>
