--- a/client/src/app/incidents/incidents.component.html
+++ b/client/src/app/incidents/incidents.component.html
@@ -1,3 +1,6 @@
+<div class="container">
+    <app-header></app-header>
+</div>
 <div *ngIf="user">
   <div class="row">
     <div *ngIf="user.isTracker" class="col-md-3">Security Weaknesses: {{weakness}}</div>
