--- a/client/src/app/new-incident/new-incident.component.html
+++ b/client/src/app/new-incident/new-incident.component.html
@@ -1,3 +1,6 @@
+<div class="container">
+    <app-header></app-header>
+</div>
 <form>
   Brief Description: 
   <input #shortDescription type="text" name='shortDescription' class='form-control'>
