--- a/client/src/app/user-info/user-info.component.html
+++ b/client/src/app/user-info/user-info.component.html
@@ -1,3 +1,6 @@
+<div class="container">
+    <app-header></app-header>
+</div>
 <form>
   First Name: 
   <input #first type="text" class="form-control" value="{{user.firstName}}">
