--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" *ngIf="user">
   <div class="container-fluid">
       <div class="navbar-header">
           <a class="navbar-brand" href="#">Incident Tracking</a>
@@ -7,7 +7,7 @@
           <li (click)="info()" >{{user.firstName}} {{user.lastName}}</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-          <li *ngIf="user"><button class="btn btn-default" (click)="logout()">Logout</button></li>
+          <li><button class="btn btn-default" (click)="logout()">Logout</button></li>
       </ul>
   </div>
 </nav>
