clean up the code and make the views nicer

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,8 @@
-<div class="container">
-    <router-outlet></router-outlet>
-</div>
+<router-outlet></router-outlet>
+
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
-    <div class="container-fluid">
-        <div class="navbar-header">
+    <div class="row">
+        <div class="col-md-12">
             <a class="navbar-brand">Maestro</a>
         </div>
     </div>
