--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -3,11 +3,13 @@
 <br>
 <br>
 
-<form>
-  Email:
-  <input #email type="text" class="form-control" >
-  Password: 
-  <input #password type="password" class="form-control">
-  <br>
-  <button (click)="login(email.value, password.value)" class="btn btn-defaule">Login</button>
-</form>
+<div class="container">
+  <form>
+    Email:
+    <input #email type="text" class="form-control" >
+    Password: 
+    <input #password type="password" class="form-control">
+    <br>
+    <button (click)="login(email.value, password.value)" class="btn btn-defaule">Login</button>
+  </form>
+</div>
