--- a/client/src/app/incident-details/incident-details.component.css
+++ b/client/src/app/incident-details/incident-details.component.css
@@ -7,8 +7,13 @@
     color: green;
 }
 .warning{
-    color: yellow;
+    color: #cccc00;
 }
 .danger{
     color: red;
+}
+
+.card{
+    margin-bottom: 10em;
+    background-color: #dddddd;
 }
