change button colors

--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -11,7 +11,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
           <!--The logout button-->
-          <li><button class="btn btn-default" (click)="logout()">Logout</button></li>
+          <li><button class="btn btn-danger" (click)="logout()">Logout</button></li>
       </ul>
   </div>
 </nav>
