--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -17,6 +17,6 @@
     <br>
 
     <!--submit button-->
-    <button (click)="login()" class="btn btn-defaule">Login</button>
+    <button (click)="login()" class="btn btn-success">Login</button>
   </form>
 </div>
