--- a/client/src/app/new-user/new-user.component.html
+++ b/client/src/app/new-user/new-user.component.html
@@ -22,7 +22,7 @@
     <br>
 
     <!--submit button-->
-    <button (click)="addUser()" class="btn btn-default">Create</button>
+    <button (click)="addUser()" class="btn btn-info">Create</button>
 
     <!--back button-->
     <button type="button" class="btn btn-danger" routerLink="/incidents">Cancel</button>
