--- a/client/src/app/user-info/user-info.component.html
+++ b/client/src/app/user-info/user-info.component.html
@@ -2,7 +2,7 @@
 <div class="container" *ngIf="user">
 
   <!--back button-->
-  <button type="button" routerLink="/incidents" class="btn btn-default">Go To All Incidents</button>
+  <button type="button" routerLink="/incidents" class="btn btn-primary">Go To All Incidents</button>
 
   <br>
   <br>
@@ -24,6 +24,6 @@
     <br>
 
     <!--submit button-->
-    <button (click)="updateUser()" class="btn btn-default">Save</button>
+    <button (click)="updateUser()" class="btn btn-success">Save</button>
   </form>
 </div>
