--- a/client/src/app/incident-details/incident-details.component.css
+++ b/client/src/app/incident-details/incident-details.component.css
@@ -32,3 +32,15 @@
     margin-bottom: 10em;
     background-color: #dddddd;
 }
+
+i {
+    border: solid black;
+    border-width: 0 1px 1px 0;
+    display: inline-block;
+    padding: 3px;
+}
+
+.down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
