add creator to tracker detail screen

--- a/client/src/app/incident-details/incident-details.component.html
+++ b/client/src/app/incident-details/incident-details.component.html
@@ -69,6 +69,11 @@
     <!--tracker-->
     <div *ngIf="user.isTracker">
       Resolution: <textarea #resolution class="form-control" rows="5" [(ngModel)]="incident.incidentrevisions[revision].resolution" name="resolution"></textarea>
+      <br>
+      <div class="well">
+        Creator: {{creator.firstName}} {{creator.lastName}}
+      </div>
+      
     </div>
 
     <br>
