--- a/client/src/app/incidents/incidents.component.html
+++ b/client/src/app/incidents/incidents.component.html
@@ -16,18 +16,21 @@
         <h4>New Incidents: <span class="number">{{newincidents}}</span></h4>
       </div>
       <div class="col-md-2">
-        <button type="button" class="btn btn-info" routerLink="/newuser"
-        >New User
-      </button>
+        <button type="button" class="btn btn-info" routerLink="/newuser">
+          New User
+        </button>
+      </div>
     </div>
-    </div>
+
     <!--The user dashboard-->
     <div *ngIf="!user.isTracker" class="row">
       <div class="col-md-10"><h3>My Incidents</h3></div>
       <div class="col-md-2"><button type="button" class="btn btn-info" routerLink="/newIncident">New Incident</button></div>
     </div>
   </div>
+
     <br>
+
   <table class="table-hover well">
     <!--Table Headers-->
     <thead>
